--- a/coreareas.json
+++ b/coreareas.json
@@ -39,7 +39,7 @@
         "reExamDueToIllness": " Re-exams due to documented illness or for other acceptable reasons are held immediately before or at the beginning of the following semester. If KEA estimates that the student has been almost fully active in the project work, a make-up exam will be held based on the project work. If KEA estimates that the student has not been almost fully active in the project work, the make-up exam will take the form of a new project exam."
     },
     {
-        "name": " 3rd Semester Exam – Multimedia Production Advanced",
+        "name": "1. 3rd Semester Exam – Multimedia Production Advanced",
         "numberOfEcts": " 20 ECTS",
         "requirements": " The objective is to test the students’ understanding of the theory, method and tools acquired through the compulsory program element Multimedia Production Advanced, and the students’ ability to develop a professional profile in relation to the current requirements in the area.",
         "exam":" The exam consists of: Presentation, Examination, Grading, and Feedback",
@@ -48,7 +48,7 @@
         "reExamDueToIllness": " Re-exams due to documented illness or for other acceptable reasons are held before the beginning of the following semester. If KEA estimates that the student has been almost fully active in the compulsory program elements, the make-up exam will be based on the production and profile. If KEA estimates that the student has not been almost fully active in the compulsory program elements, the make-up exam will be based on a substitution assignment."
     },
     {
-        "name": " 3rd Semester Exam – Elective Subject",
+        "name": "2. 3rd Semester Exam – Elective Subject",
         "numberOfEcts": " 10 ECTS",
         "requirements": " The elective subject is concluded with a presentation and a discussion, either individually or in groups, of one or more products which the students have developed in connection with the elective subject. The requirements for the presentation and product(s) are made available on the learning platform for the Multimedia Design and Communication program.",
         "exam":" The exam form may vary depending on the objective of the elective subject in question. The exam is described under each elective subject on the learning platform for the Multimedia Design and Communication program.",
